# graph-theoretic-approach-for-MSA-bt

./: ..gitignore.un~  .gitignore  README.md
Bachelorarbeit/: Hauptdokument.aux  Hauptdokument.bbl  Hauptdokument.blg  Hauptdokument.out  Hauptdokument.tex  Hauptdokument.toc  MathCmds.tex  Quellen.bib  german.bst
Bachelorarbeit/chapter/: DP.aux  DP.tex  EidesstattlicheErklaerung.aux  EidesstattlicheErklaerung.tex  Einleitung.aux  Einleitung.tex  Fazit.aux  Fazit.tex  Flussnetze.aux  Flussnetze.tex  Programmierung.aux  Programmierung.tex  Titelblatt.aux  Titelblatt.tex  Validierung.aux  Validierung.tex  dialign.aux  dialign.tex  min-cut.aux  min-cut.tex
Einführungsvortrag/: Einführungsvortrag.aux  Einführungsvortrag.nav  Einführungsvortrag.out  Einführungsvortrag.tex  Einführungsvortrag.toc  Einführungsvortrag.vrb  MathCmds.tex  configBeamer.tex  wwustyle2.sty
Vorlage_PRIA/: Hauptdokument.tex  Quellen.bib
Vorlage_PRIA/chapter/: Diskussion.tex  Einleitung.tex  Ergebnisse.tex  Fazit.tex  Methodik.tex  Titelblatt.tex
src/: CMakeLists.txt  longest_path_runner.cpp  main.cpp  site.cpp  site.h  succession_graph_seq.cpp  succession_graph_seq.h  succession_node.cpp  succession_node.h
src/tests/: CMakeLists.txt  site_test.cpp  succession_graph_seq_test.cpp  succession_node_test.cpp  test_main.cpp
